src/objects/MICO_Environment_Release__c.object
<CustomObject>
    <description>Business Description: This object is used to link a release to an environment. This can be used to track what releases have been put in to what environment and when they were put there.

Used In: Mission Control App</description>
    <fields>
        <fullName>Actual_Finish__c</fullName>
        <label>Actual Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start__c</fullName>
        <inlineHelpText>The date the linked release was pushed to the linked environment</inlineHelpText>
        <label>Actual Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Back_out_plan__c</fullName>
        <inlineHelpText>How would this depoyment be reversed if it failed or was found to be problematic</inlineHelpText>
        <label>Back out plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this release been completed to this environment?</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Impact__c</fullName>
        <inlineHelpText>What will the impact of this deployment be on the availability of the environments, and the users who are currently using them.</inlineHelpText>
        <label>Deployment Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>MICO_Environment__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Environment_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Impacted_Markets__c</fullName>
        <label>Impacted Markets</label>
        <picklist>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Planned_Finish__c</fullName>
        <inlineHelpText>The planned finish time of the release</inlineHelpText>
        <label>Planned Finish</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planned_Start__c</fullName>
        <inlineHelpText>The Planned Start and Finish time of this release</inlineHelpText>
        <label>Planned Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Release_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person responsible for executing the release</inlineHelpText>
        <label>Release Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Environment_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>MICO_Release__c</referenceTo>
        <relationshipLabel>Environment Releases</relationshipLabel>
        <relationshipName>MICO_Environment_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person reviewing the release process</inlineHelpText>
        <label>Release Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Environment_Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Environment Release</label>
    <nameField>
        <displayFormat>ER-/{000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Environment Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>